logs/atcd.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/atc_thrift'...
Compiling './lib/python3.5/site-packages/atc_thrift/Atcd.py'...
***   File "./lib/python3.5/site-packages/atc_thrift/Atcd.py", line 583
    except TrafficControlException, failure:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atc_thrift-0.1.6.dist-info'...
Listing './lib/python3.5/site-packages/atcd'...
Listing './lib/python3.5/site-packages/atcd/backends'...
Listing './lib/python3.5/site-packages/atcd/scripts'...
Listing './lib/python3.5/site-packages/atcd/tools'...
Compiling './lib/python3.5/site-packages/atcd/tools/test_secure_access.py'...
***   File "./lib/python3.5/site-packages/atcd/tools/test_secure_access.py", line 66
    print settings
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/atcd-0.1.6.dist-info'...
Listing './lib/python3.5/site-packages/daemonize-2.4.7.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyotp'...
Listing './lib/python3.5/site-packages/pyotp-1.4.1.egg-info'...
Listing './lib/python3.5/site-packages/pyroute2'...
Listing './lib/python3.5/site-packages/pyroute2/ipdb'...
Listing './lib/python3.5/site-packages/pyroute2/netlink'...
Listing './lib/python3.5/site-packages/pyroute2/netlink/generic'...
Listing './lib/python3.5/site-packages/pyroute2/netlink/ipq'...
Listing './lib/python3.5/site-packages/pyroute2/netlink/nfnetlink'...
Listing './lib/python3.5/site-packages/pyroute2/netlink/rtnl'...
Listing './lib/python3.5/site-packages/pyroute2/netlink/taskstats'...
Listing './lib/python3.5/site-packages/pyroute2-0.3.3.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/sparts'...
Listing './lib/python3.5/site-packages/sparts/fb303'...
Listing './lib/python3.5/site-packages/sparts/gen'...
Listing './lib/python3.5/site-packages/sparts/gen/fb303'...
Listing './lib/python3.5/site-packages/sparts/tasks'...
Listing './lib/python3.5/site-packages/sparts/tests'...
Listing './lib/python3.5/site-packages/sparts/thrift'...
Listing './lib/python3.5/site-packages/sparts-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './lib/python3.5/site-packages/thrift-0.11.0.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
